# only_scraper

./: Cargo.toml  README.md
doc/: README.html  search-index.js  src-files.js
doc/docs/: all.html  fn.scrape.html  index.html  sidebar-items.js
doc/src/docs/: lib.rs.html
doc/src/docs/chrome/: application.rs.html  executable.rs.html  mod.rs.html  scraper.rs.html
src/: lib.rs
src/chrome/: application.rs  executable.rs  mod.rs  scraper.rs
