[lib]
name = "only_scraper"
crate-type = ["rlib", "cdylib"]

[package]
name = "only_scraper"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Gonzalez <me@edlugora.com>"]
description = "Only scrape webpages"
license = "MIT"
repository = "https://github.com/edlugora96/only_scraper"
readme = "README.md"

[dependencies]
